// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration:constructs/numeric > bigint > should tokenize bigint (binary) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 bigint (1:1-1:24)
	│		 value: "0b11101001010101010101n"
	│		 whitespace: ""
	├─2 eof (1:24-1:24)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > bigint > should tokenize bigint (exponential) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 bigint (1:1-1:5)
	│		 value: "1e3n"
	│		 whitespace: ""
	├─2 eof (1:5-1:5)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > bigint > should tokenize bigint (float) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 bigint (1:1-1:6)
	│		 value: "3.13n"
	│		 whitespace: ""
	├─2 eof (1:6-1:6)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > bigint > should tokenize bigint (hex) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 bigint (1:1-1:19)
	│		 value: "0x123456789ABCDEFn"
	│		 whitespace: ""
	├─2 eof (1:19-1:19)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > bigint > should tokenize bigint (natural) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 bigint (1:1-1:3)
	│		 value: "0n"
	│		 whitespace: ""
	├─2 eof (1:3-1:3)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > bigint > should tokenize bigint (numeric separators) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 bigint (1:1-1:31)
	│		 value: "1_000_000_000_000_000_000_000n"
	│		 whitespace: ""
	├─2 eof (1:31-1:31)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > bigint > should tokenize bigint (octal) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 bigint (1:1-1:16)
	│		 value: "0o777777777777n"
	│		 whitespace: ""
	├─2 eof (1:16-1:16)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > binary > should tokenize binary number (lowercase) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:14)
	│		 value: "0b01010101101"
	│		 whitespace: ""
	├─2 eof (1:14-1:14)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > binary > should tokenize binary number (numeric separators) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:12)
	│		 value: "0b1010_0001"
	│		 whitespace: ""
	├─2 eof (1:12-1:12)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > binary > should tokenize binary number (uppercase) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:14)
	│		 value: "0B11101001010"
	│		 whitespace: ""
	├─2 eof (1:14-1:14)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > exponential > should tokenize exponential number (float) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:7)
	│		 value: "1.3e26"
	│		 whitespace: ""
	├─2 eof (1:7-1:7)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > exponential > should tokenize exponential number (no punctuators) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:4)
	│		 value: "1E3"
	│		 whitespace: ""
	├─2 eof (1:4-1:4)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > exponential > should tokenize exponential number (numeric separators) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:13)
	│		 value: "100_130e-2_6"
	│		 whitespace: ""
	├─2 eof (1:13-1:13)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > exponential > should tokenize exponential number (signed integer) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:5)
	│		 value: "0e+5"
	│		 whitespace: ""
	├─2 eof (1:5-1:5)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > exponential > should tokenize exponential number (signed integer, negative) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:7)
	│		 value: "175e-2"
	│		 whitespace: ""
	├─2 eof (1:7-1:7)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > float > should tokenize floating point number (leading digit) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:4)
	│		 value: "1.3"
	│		 whitespace: ""
	├─2 eof (1:4-1:4)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > float > should tokenize floating point number (leading digits) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:5)
	│		 value: "26.5"
	│		 whitespace: ""
	├─2 eof (1:5-1:5)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > float > should tokenize floating point number (leading dot) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:6)
	│		 value: ".1398"
	│		 whitespace: ""
	├─2 eof (1:6-1:6)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > float > should tokenize floating point number (missing tail) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:3)
	│		 value: "3."
	│		 whitespace: ""
	├─2 eof (1:3-1:3)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > float > should tokenize floating point number (numeric separators) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:9)
	│		 value: "1_050.95"
	│		 whitespace: ""
	├─2 eof (1:9-1:9)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > hex > should tokenize hexadecimal number (lowercase) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:19)
	│		 value: "0x0123456789FeDcBa"
	│		 whitespace: ""
	├─2 eof (1:19-1:19)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > hex > should tokenize hexadecimal number (numeric separators) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:11)
	│		 value: "0xA0_B0_C0"
	│		 whitespace: ""
	├─2 eof (1:11-1:11)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > hex > should tokenize hexadecimal number (uppercase) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:19)
	│		 value: "0XaBcDeF0123456789"
	│		 whitespace: ""
	├─2 eof (1:19-1:19)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit0) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:2)
	│		 value: "0"
	│		 whitespace: ""
	├─2 eof (1:2-1:2)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit1) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:2)
	│		 value: "1"
	│		 whitespace: ""
	├─2 eof (1:2-1:2)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit2) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:2)
	│		 value: "2"
	│		 whitespace: ""
	├─2 eof (1:2-1:2)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit3) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:2)
	│		 value: "3"
	│		 whitespace: ""
	├─2 eof (1:2-1:2)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit4) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:2)
	│		 value: "4"
	│		 whitespace: ""
	├─2 eof (1:2-1:2)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit5) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:2)
	│		 value: "5"
	│		 whitespace: ""
	├─2 eof (1:2-1:2)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit6) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:2)
	│		 value: "6"
	│		 whitespace: ""
	├─2 eof (1:2-1:2)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit7) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:2)
	│		 value: "7"
	│		 whitespace: ""
	├─2 eof (1:2-1:2)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit8) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:2)
	│		 value: "8"
	│		 whitespace: ""
	├─2 eof (1:2-1:2)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (chars.digit9) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:2)
	│		 value: "9"
	│		 whitespace: ""
	├─2 eof (1:2-1:2)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (digits) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:11)
	│		 value: "9876543210"
	│		 whitespace: ""
	├─2 eof (1:11-1:11)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > integer > should tokenize integer (numeric separators) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:18)
	│		 value: "1_000_000_000_000"
	│		 whitespace: ""
	├─2 eof (1:18-1:18)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > octal > should tokenize octal number (lowercase) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:11)
	│		 value: "0o01234567"
	│		 whitespace: ""
	├─2 eof (1:11-1:11)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > octal > should tokenize octal number (numeric separators) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:10)
	│		 value: "0o2_2_5_6"
	│		 whitespace: ""
	├─2 eof (1:10-1:10)
	│		 value: null
	│		 whitespace: ""
`;

exports[`integration:constructs/numeric > octal > should tokenize octal number (uppercase) 1`] = `
tokens[3]
	├─0 sof (1:1-1:1)
	│		 value: null
	│		 whitespace: ""
	├─1 number (1:1-1:11)
	│		 value: "0O76543210"
	│		 whitespace: ""
	├─2 eof (1:11-1:11)
	│		 value: null
	│		 whitespace: ""
`;
